--- a/index.html
+++ b/index.html
@@ -606,15 +606,16 @@
 							<img src="images/senior_center1.JPG" class="img-responsive img-centered" alt="">
                             <img src="images/senior_center2.JPG" class="img-responsive img-centered" alt="">
                             <img src="images/senior_center3.JPG" class="img-responsive img-centered" alt="">
+							<img src="images/senior_center4.JPG" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>Nov 2023
                                     </strong>
                                 </li>
                                 <li>
-                                    <strong>Silicon Valley Tsinghua Alumni Association 2023 Annual Gathering
+                                    <strong>Aegis Gardens and Fremont Hills Seinor Home 
                                     </strong>
-                                    Sunny took charge of leading children in a variety of enjoyable math related activities.
+									Sunny showcased her violin skills and played in an ensemble with her friends, creating a delightful afternoon for the seniors.
                                 </li>
                             </ul>
                             <img src="images/qinghua1.JPG" class="img-responsive img-centered" alt="">
@@ -646,6 +647,25 @@
 									Sunny's first shot at putting together some cool math activities for the kids during the festival.
                                 </li>
                             </ul>
+							<hr class="star-primary">
+                            <img src="images/vo11.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/vol2.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/vol3.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/vo14.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/vol5.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/vol6.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/vol7.jpg" class="img-responsive img-centered" alt="">
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>2017-2019
+                                    </strong>
+                                </li>
+                                <li>
+                                    <strong>Cupertino Senior Centers
+                                    </strong>
+									Sunny served as both the MC and performer during each visit, making it a truly enjoyable experience for her.
+                                </li>
+                            </ul>
 							<p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
 							</p>
@@ -656,8 +676,6 @@
             </div>
         </div>
     </div>
-
-  
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
