--- a/index.html
+++ b/index.html
@@ -159,6 +159,44 @@
             </div>
         </div>
     </section>
+       <!-- Footer -->
+    <footer class="text-center">
+        <div class="footer-above">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col col-md-4">
+                        <h3>Education</h3>
+                        <p>Saint Andrew's Episcopal School 2021-2024
+                          <br>Christa McAuliffe Elementary School 2018-2021
+                          <br>Stocklmeir Elementary School 2017-2018
+                          <br>Whittier Elementary School ELP 2015-2017</p>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3>Contact</h3>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="mailto:sgao24@students.st-andrews.org" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3>My Performance Art  <a href="https://guzhengalive.com/guzheng-in-90-seconds"> Resume </a></h3>
+                        <p>
+                          Please see my performance resume for more details.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-below">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        Copyright &copy; Sunny Gao 2024
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
