--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Education</h3>
-                        <p>Saint Andrew's Episcopal School 2021-2024
-                          <br>Christa McAuliffe Elementary School 2018-2021
-                          <br>Stocklmeir Elementary School 2017-2018
-                          <br>Whittier Elementary School ELP 2015-2017</p>
+                        <p>Saint Andrew's Episcopal School 
+						<br>2021-2024
+                          <br>Christa McAuliffe Elementary School
+						<br> 2018-2021
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Contact</h3>
