--- a/index.html
+++ b/index.html
@@ -686,13 +686,13 @@
                                 </li>
                             </ul>
 							<hr class="star-primary">
-                            <img src="images/vo11.jpg" class="img-responsive img-centered" alt="">
-                            <img src="images/vol2.jpg" class="img-responsive img-centered" alt="">
-                            <img src="images/vol3.jpg" class="img-responsive img-centered" alt="">
-                            <img src="images/vo14.jpg" class="img-responsive img-centered" alt="">
-                            <img src="images/vol5.jpg" class="img-responsive img-centered" alt="">
-                            <img src="images/vol6.jpg" class="img-responsive img-centered" alt="">
-                            <img src="images/vol7.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/vo11.JPG" class="img-responsive img-centered" alt="">
+                            <img src="images/vol2.JPG" class="img-responsive img-centered" alt="">
+                            <img src="images/vol3.JPG" class="img-responsive img-centered" alt="">
+                            <img src="images/vo14.JPG" class="img-responsive img-centered" alt="">
+                            <img src="images/vol5.JPG" class="img-responsive img-centered" alt="">
+                            <img src="images/vol6.JPG" class="img-responsive img-centered" alt="">
+                            <img src="images/vol7.JPG" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>2017-2019
