--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <div class="intro-text">
                         <span class="name">Sunny Gao</span>
                         <hr class="star-light">
-                        <span class="skills">An diligent student, a passionate musician, an enthusiastic athlete, a creative artist, and a dedicated community volunteer</span>
+                        <span class="skills">An diligent student, a passionate musician, an enthusiastic athlete, a creative artist, and a dedicated community volunteer,please click each picture to learn more about me.</span>
                     </div>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>My Performance Art  <a href="https://guzhengalive.com/guzheng-in-90-seconds"> Resume </a></h3>
+                        <h3>My Performance Art  <a href="https://docs.google.com/document/d/18LLALEQkMZS7PS9qUMAK0DNWEZp5S3MtB0un4E_Cmh8/edit?usp=sharing"> Resume </a></h3>
                         <p>
                           Please see my performance resume for more details.
                     </div>
