--- a/index.html
+++ b/index.html
@@ -545,6 +545,13 @@
                         <div class="modal-body">
                             <h2>Sports Pictures</h2>
                             <hr class="star-primary">
+							<ul class="list-inline item-details">
+                            <img src="images/bb1.JPG" class="img-responsive img-centered" alt="">
+							<img src="images/bb2.JPG" class="img-responsive img-centered" alt="">
+							<img src="images/bb3.JPG" class="img-responsive img-centered" alt="">
+							<img src="images/bb4.JPG" class="img-responsive img-centered" alt="">
+							<img src="images/bb5.JPG" class="img-responsive img-centered" alt="">
+                            </ul>
                             <ul class="list-inline item-details">
 							<img src="images/basketball2023.JPG" class="img-responsive img-centered" alt="">
                                 <li>
