--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
+					<a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="images/sunny_musical.jpg" class="img-responsive" alt="">
+                    </a>
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
