--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-					<a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+					<a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -113,6 +113,8 @@
                         </div>
                         <img src="images/sunny_musical.jpg" class="img-responsive" alt="">
                     </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">				
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -161,7 +163,7 @@
                       </p>
                 </div>
                 <div class="col-lg-4">
-                    <p> I like playing violin, Guzheng, basketball, drawing, singing, dance and musical
+                    <p> I like playing violin, Guzheng, basketball, drawing, singing, dance and musical.
                       </p>
                 </div>
             </div>
