--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm a 8th grade student. I like Math, Science, Social Study.
+                    <p>I'm a 8th grade student. I like Math, Science, Social Study and Reading.
                       </p>
                 </div>
                 <div class="col-lg-4">
