--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/sunny_musical.jpg" class="img-responsive" alt="">
+                        <img src="images/xiongmao1.JPG" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">				
@@ -153,7 +153,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About-here</h2>
+                    <h2>About</h2>
                     <hr class="star-light">
                 </div>
             </div>
