--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/sunny.jpg" class="img-responsive" alt="">
+                        <img src="images/DSC_0185.JPG" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">				
