--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/sunny_musical.jpg" class="img-responsive" alt="">
+                        <img src="images/sunny_panda.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-3 portfolio-item">				
@@ -134,8 +134,18 @@
                         <img src="images/sunny_drawing.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-3 portfolio-item">
+				<div class="col-sm-3 portfolio-item">
                     <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="images/sunny_host.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item">
+                    <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -694,7 +704,7 @@
         </div>
     </div>
   
-      <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
