--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/sunny_basketball.jpg" class="img-responsive" alt="">
+                        <img src="images/sunny_basketball2.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-3 portfolio-item">
