--- a/index.html
+++ b/index.html
@@ -562,21 +562,23 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Sports Pictures</h2>
+                            <h2>Musical & Acting Pictures</h2>
                             <hr class="star-primary">
                             <ul class="list-inline item-details">
-                            <img src="images/bb2.JPG" class="img-responsive img-centered" alt="">
-                            <img src="images/bb3.JPG" class="img-responsive img-centered" alt="">
-                            <img src="images/bb4.JPG" class="img-responsive img-centered" alt="">
-                            <img src="images/bb5.JPG" class="img-responsive img-centered" alt="">
-                            </ul>
-                            <ul class="list-inline item-details">
-                            <img src="images/basketball2023.JPG" class="img-responsive img-centered" alt="">
+                            <img src="images/musical2.jpg" class="img-responsive img-centered" alt="">
+							<li>
+									Sunny is positioned at the 6th right spot in the picture.
+                            </li>
+							<img src="images/musical1.jpg" class="img-responsive img-centered" alt="">
+							<li>
+                                    Sunny is in red dress in the picture.
+                            </li>
+							<img src="images/musical3.jpg" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
-                                    7th Grade Basketball team
+                                    Broadway Experience
                                     </strong>
-                                    Sunny is positioned at the leftmost spot in the second row in the picture.
+                                    Sunny is positioned at the right spot in the above picture.
                                 </li>
                             </ul>
                             <ul class="list-inline item-details">
