--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                       </p>
                 </div>
                 <div class="col-lg-4">
-                    <p> I like playing violin, Guzheng, basketball, drawing, singing, dance and musical.
+                    <p> I like playing violin, Guzheng, basketball, musical, drawing, singing and dance.
                       </p>
                 </div>
             </div>
@@ -569,10 +569,12 @@
 							<li>
 									Sunny is positioned at the 6th right spot in the picture.
                             </li>
+							<p>
 							<img src="images/musical1.jpg" class="img-responsive img-centered" alt="">
 							<li>
                                     Sunny is in red dress in the picture.
                             </li>
+							<p>
 							<img src="images/musical3.jpg" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
@@ -582,16 +584,31 @@
                                 </li>
                             </ul>
                             <ul class="list-inline item-details">
-                            <img src="images/volleyball2022.JPG" class="img-responsive img-centered" alt="">
+                            <img src="images/musical1.jpg" class="img-responsive img-centered" alt="">
+                            <li>
+                                    Sunny is in red dress in the picture.
+                            </li>
+                            <p>
+                            <img src="images/xiongmao1.JPG" class="img-responsive img-centered" alt="">
                                 <li>
-                                    <strong>7th Grade Volleyball team</strong>
-                                    Sunny is positioned at the rightmost spot in the back row in the picture.
+                                    <strong>
+                                    Chinese Drama 
+                                    </strong>
+                                    Sunny is acting sister Panda in the drama "Fight vs. the Virus".
                                 </li>
                             </ul>
-                            <img src="images/volleyball2021.JPG" class="img-responsive img-centered" alt="">
+                            <ul class="list-inline item-details">
+                            <img src="images/DSC_0130.JPG" class="img-responsive img-centered" alt="">
+                            <li>
+                                    Sunny is in red dress in the picture.
+                            </li>
+                            <p>
+                            <img src="images/DSC_0148.JPG" class="img-responsive img-centered" alt="">
                                 <li>
-                                    <strong>6th Grade Volleyball team</strong>
-                                    Sunny is positioned at the rightmost spot in the back row in the picture.
+                                    <strong>
+                                    Chinese Drama
+                                    </strong>
+                                    Sunny is acting as the little mouse in the musical "Happy Animals".
                                 </li>
                             </ul>
                             <p>
