--- a/index.html
+++ b/index.html
@@ -585,9 +585,6 @@
                             </ul>
                             <ul class="list-inline item-details">
                             <img src="images/musical1.jpg" class="img-responsive img-centered" alt="">
-                            <li>
-                                    Sunny is in red dress in the picture.
-                            </li>
                             <p>
                             <img src="images/xiongmao1.JPG" class="img-responsive img-centered" alt="">
                                 <li>
@@ -641,11 +638,20 @@
 							<img src="images/bb4.JPG" class="img-responsive img-centered" alt="">
 							<img src="images/bb5.JPG" class="img-responsive img-centered" alt="">
                             </ul>
+							<ul class="list-inline item-details">
+                            <img src="images/basketball2023.JPG" class="img-responsive img-centered" alt="">
+                                <li>
+                                    <strong>
+                                    SVBC 8th-9th Grade Basketball Team
+                                    </strong>
+                                    Sunny is positioned at 3rd from left in the back row in the picture.
+                                </li>
+                            </ul>
                             <ul class="list-inline item-details">
 							<img src="images/basketball2023.JPG" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
-									7th Grade Basketball team 
+									7th Grade Basketball Team 
                                     </strong>
 									Sunny is positioned at the leftmost spot in the second row in the picture.
                                 </li>
