--- a/index.html
+++ b/index.html
@@ -584,9 +584,9 @@
                                 </li>
                             </ul>
                             <ul class="list-inline item-details">
-                            <img src="images/musical1.jpg" class="img-responsive img-centered" alt="">
-                            <p>
                             <img src="images/xiongmao1.JPG" class="img-responsive img-centered" alt="">
+                            <p>
+                            <img src="images/drama2.jpg" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
                                     Chinese Drama 
