--- a/index.html
+++ b/index.html
@@ -550,6 +550,49 @@
             </div>
         </div>
     </div>
+	<div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+             <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>MC Experience</h2>
+                            <hr class="star-primary">
+                            <ul class="list-inline item-details">
+                            <img src="images/vol5.JPG" class="img-responsive img-centered" alt="">
+                            <p>
+                            <img src="images/vol3.JPG" class="img-responsive img-centered" alt="">
+                            <li>
+                                    Sunny served as the MC in the senior performance shows.
+                            </li>
+                            <p>
+							</ul>
+							<ul>
+							<ul class="list-inline item-details">
+                            <img src="images/host1.JPG" class="img-responsive img-centered" alt="">
+                                <li>
+                                    Sunny served as the MC in the Chunhui Drama performance in Chinese.
+                                </li>
+                            </ul>
+						    <ul class="list-inline item-details">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/TToi_sBH2Pk?si=k-rI8gy-BKj2yAJm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							</ul>
+							<p>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </p>
+                        </div>
+                    </div>
+                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 	<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -639,7 +682,7 @@
 							<img src="images/bb5.JPG" class="img-responsive img-centered" alt="">
                             </ul>
 							<ul class="list-inline item-details">
-                            <img src="images/basketball2023.JPG" class="img-responsive img-centered" alt="">
+                            <img src="images/svbc.JPG" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
                                     SVBC 8th-9th Grade Basketball Team
@@ -790,9 +833,7 @@
 							<hr class="star-primary">
                             <img src="images/vo11.JPG" class="img-responsive img-centered" alt="">
                             <img src="images/vol2.JPG" class="img-responsive img-centered" alt="">
-                            <img src="images/vol3.JPG" class="img-responsive img-centered" alt="">
                             <img src="images/vo14.JPG" class="img-responsive img-centered" alt="">
-                            <img src="images/vol5.JPG" class="img-responsive img-centered" alt="">
                             <img src="images/vol6.JPG" class="img-responsive img-centered" alt="">
                             <img src="images/vol7.JPG" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
