--- a/index.html
+++ b/index.html
@@ -743,23 +743,35 @@
                             <h2>MC Experience</h2>
                             <hr class="star-primary">
                             <ul class="list-inline item-details">
+                            <img src="images/host1.JPG" class="img-responsive img-centered" alt="">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/-c4atGjYJ_Q?si=enxoCCHYnc_fu0Z7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <li>
+                                    Besides an actor, Sunny took on the role of MC for the Chunhui Drama performance conducted in Chinese in 2022.
+                                </li>
+                           </ul>
+                            <ul class="list-inline item-details">
                             <img src="images/vol5.JPG" class="img-responsive img-centered" alt="">
                             <p>
                             <img src="images/vol3.JPG" class="img-responsive img-centered" alt="">
                             <li>
-                                    Sunny served as the MC in the senior performance shows.
+                                    Sunny served as the MC in the senior performance shows 2018.
                             </li>
                             <p>
                             </ul>
                             <ul class="list-inline item-details">
-                            <img src="images/host1.JPG" class="img-responsive img-centered" alt="">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/TToi_sBH2Pk?si=k-rI8gy-BKj2yAJm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<li>
+                                    Sunny served as the MC in the her voilin teacher's audition.
+                            </li>
+                            </ul>
+							<ul class="list-inline item-details">
+                            <img src="images/sunny_mc1.JPG" class="img-responsive img-centered" alt="">
+							<img src="images/sunny_mc2.JPG" class="img-responsive img-centered" alt="">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/UfdWqQUJLQE?si=UKnAyUUM2DUfC01b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 <li>
-                                    Sunny served as the MC in the Chunhui Drama performance in Chinese.
+                                    Sunny served as the MC during the Lunar New Year Celebration at school in 2019.
                                 </li>
                            </ul>
-                            <ul class="list-inline item-details">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/TToi_sBH2Pk?si=k-rI8gy-BKj2yAJm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            </ul>
                             <p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </p>
