--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <div class="intro-text">
                         <span class="name">Sunny Gao</span>
                         <hr class="star-light">
-                        <span class="skills">An diligent student, a passionate musician, an enthusiastic athlete, a creative artist, and a dedicated community volunteer,please click each picture to learn more about me.</span>
+                        <span class="skills">A diligent student, a passionate musician, a dedicated actor, an enthusiastic athlete, a creative artist, and a commited community volunteer,please click on each picture to learn more about me.</span>
                     </div>
                 </div>
             </div>
